[package]
name = "curt_os"
version = "0.1.0"
edition = "2018"
authors = ["Curtis Wilson <ten_sword@proton."]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic