[package]
name = "curt_os"
version = "0.1.0"
edition = "2018"
authors = ["Curtis Wilson <ten_sword@proton.me>"]

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ['C:\Program Files\qemu\qemu-system-x86_64', "-drive", "format=raw,file={}"]